[project]
name = "quantbot"
version = "0.1.0"
description = "quantbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
quantbot = "quantbot.main:run"
run_crew = "quantbot.main:run"
train = "quantbot.main:train"
replay = "quantbot.main:replay"
test = "quantbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
